[gd_scene load_steps=5 format=3 uid="uid://ba8xiw4345660"]

[ext_resource type="Script" uid="uid://7tv1pakbltm1" path="res://UI/character_menu.gd" id="1_6tlbt"]
[ext_resource type="PackedScene" uid="uid://cy0hudn5cqupe" path="res://systems/stats/stats_menu.tscn" id="2_5thor"]
[ext_resource type="PackedScene" uid="uid://c5wra7g07oy5d" path="res://systems/inventory/scenes/inv_gui.tscn" id="2_rhfay"]
[ext_resource type="PackedScene" uid="uid://b5f1vjd5sjx45" path="res://systems/stats/skills_menu.tscn" id="3_rhfay"]

[node name="CharacterMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = 10.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98954827, 0.9775409)
script = ExtResource("1_6tlbt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 116.0
offset_bottom = 29.0

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Tabs" type="TabContainer" parent="MarginContainer/VBox"]
layout_mode = 2
current_tab = 0
clip_tabs = false

[node name="Inventory" type="Control" parent="MarginContainer/VBox/Tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="InventoryGui" parent="MarginContainer/VBox/Tabs/Inventory" instance=ExtResource("2_rhfay")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -119.18296
offset_top = 90.57321
offset_right = -131.18295
offset_bottom = 90.57321
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2113516, 1.7804805)

[node name="StatsMenu" parent="MarginContainer/VBox/Tabs" instance=ExtResource("2_5thor")]
visible = false
layout_mode = 2
use_own_input = false
metadata/_tab_index = 1

[node name="SkillsMenu" parent="MarginContainer/VBox/Tabs" instance=ExtResource("3_rhfay")]
visible = false
layout_mode = 2
use_own_input = false
metadata/_tab_index = 2
